@@ -1,8 +1,10 @@
 2013-06-03  Andy Buckley  <andy.buckley@cern.ch>
 
-	* Adding explicit protection against using inf/nan scalefactors in ATLAS_2011_S9131140.
+	* Adding explicit protection against using inf/nan scalefactors in
+	ATLAS_2011_S9131140 and H1_2000_S4129130.
 
-	* Making Analysis::scale noisly complain about invalid scalefactors.
+	* Making Analysis::scale noisly complain about invalid
+	scalefactors.
 
 2013-05-31  Andy Buckley  <andy.buckley@cern.ch>
 
